<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Enter Product Name"
        android:hint="@string/product_name"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/category_label"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/category_array"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/categoryLabel"
        app:layout_constraintTop_toBottomOf="@+id/categoryLabel" />

    <TextView
        android:id="@+id/conditionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/condition_label"
        app:layout_constraintStart_toStartOf="@+id/categorySpinner"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

    <Spinner
        android:id="@+id/conditionSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/condition_array"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/categorySpinner"
        app:layout_constraintStart_toStartOf="@+id/conditionLabel"
        app:layout_constraintTop_toBottomOf="@+id/conditionLabel" />

    <EditText
        android:id="@+id/exchangePreferenceEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/exchange_preference"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/conditionSpinner"
        app:layout_constraintStart_toStartOf="@+id/conditionSpinner"
        app:layout_constraintTop_toBottomOf="@+id/conditionSpinner"
        android:autofillHints="Exchange Preference" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangePreferenceEditText" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#FF0000"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <ListView
        android:id="@+id/searchResultsListView"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessageTextView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
