<resources>

    <string-array name="type_options">
        <item>tools</item>
        <item>transportation</item>
        <item>clothes</item>
        <item>etc</item>
    </string-array>

    <string-array name="color_options">
        <item>black</item>
        <item>white</item>
        <item>blue</item>
        <item>red</item>
    </string-array>

    <string name="postal_address">Postal Address</string>
    <string name="app_name">Barter Trader</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="user_name_default">User Name</string>
    <string name="listings">Listings</string>
    <string name="ratings">Ratings</string>
    <string name="about">About</string>
    <string name="no_reviews">No Reviews</string>
    <string name="enter_review">Enter your Review</string>
    <string name="submit_review_button_text">Submit Review</string>
    <string name="rating_summary">Rating Summary</string>
    <string name="decimal_rating_default">0 out of 5</string>
    <string name="five_stars">5 Stars</string>
    <string name="four_stars">4 Stars</string>
    <string name="three_stars">3 Stars</string>
    <string name="two_stars">2 Stars</string>
    <string name="one_star">1 Star</string>
    <string name="default_star_count">0</string>
    <string name="register">Register</string>
    <string-array name="roles_array">
        <item>Provider</item>
        <item>Receiver</item>
    </string-array>
    <string name="role_spinner_prompt">Select a Role</string>
    <string name="register_login_btn"><u>Login</u></string>
    <string name="firstName">First Name</string>
    <string name="email">Email</string>
    <string name="accountAlreadyMessage">Already have an account?</string>
    <string name="lastName">Last Name</string>
    <string name="roleSelectPrompt">Select a Role:</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="passwordRequirement">Password must be at least 6 characters.</string>
    <string name="login">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginRegister">Register</string>
    <string name="passwordRecovery">Forgot Password</string>
    <string name="recoverPage">Password Recovery</string>
    <string name="returnLogin">Return to Login</string>
    <string name="logout">Logout</string>
    <string name="postGoods">Post Goods</string>
    <string name="preferences">User Preferences</string>
    <string name="messages">Messages</string>
    <string name="profile">User Profile</string>
    <string name="search">Search</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="default_notification_channel_id">notification</string>
    <string name="returnSuccess">Return</string>
    <string name="editListing">Edit Listing</string>
    <string name="saveListing">Save Changes</string>
    <string name="deleteListing">Delete Listing</string>
    <string-array name="condition_array">
        <item>Any</item>
        <item>New</item>
        <item>Used (Like New)</item>
        <item>Used (Very Good)</item>
        <item>Used (Good)</item>
        <item>Used (Acceptable)</item>
    </string-array>
    <string-array name="category">
        <item>Any</item>
        <item>Electronics</item>
        <item>Toys &amp; Games</item>
        <item>Sports &amp; Outdoors</item>
        <item>Vehicles &amp; Parts</item>
        <item>Furniture</item>
        <item>Clothing &amp; Accessories</item>
        <item>Musical Instruments</item>
    </string-array>
    <string name="condition">Product Condition:</string>
    <string name="location">Location</string>
    <string name="product_name">Product Name</string>
    <string name="exchange_preference">Exchange Preference</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyDqCJ4dSQzQX8lSTyIva4hWX-7lqqVFS_Y</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="location_icon">Location Icon</string>
    <string name="where_are_you_located">Where are You Located?</string>
    <string name="search_your_location">Search your Location</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="feed">Feed</string>
    <string name="back_button">Back Button</string>
    <string name="post">Post</string>
    <string name="chat">Chat</string>
    <string name="select_a_category">Select a category</string>
    <string name="your_listings">Your Listings</string>
    <string name="exchange_preference_label">Exchange Preference:&#160;</string>
    <string name="description_label">Description:&#160;</string>
    <string name="product_name_label">Product Name:&#160;</string>
    <string name="condition_label">Condition:&#160;</string>
    <string name="category_label">Category:&#160;</string>
    <string name="sample_username">Sample Username</string>
    <string name="most_recent_chat_message">Most recent chat message</string>
    <string name="all_listings">All Listings</string>
    <string name="category">Product Category:</string>
    <string name="login_header">Login Header</string>
    <string name="submit">Submit</string>
    <string name="preference_for_exchange">Preference for Exchange</string>
    <string name="name_of_product">Name of Product</string>
    <string name="product_description">Product Description</string>
    <string name="post_product">Post Product</string>
    <string-array name="category_array">
        <item>Any</item>
        <item>Electronics</item>
        <item>Toys &amp; Games</item>
        <item>Sports &amp; Outdoors</item>
        <item>Vehicles &amp; Parts</item>
        <item>Furniture</item>
        <item>Clothing &amp; Accessories</item>
        <item>Musical Instruments</item>
    </string-array>
</resources>
