<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTotalValue"
        android:layout_width="315dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="Your total value:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="262dp"
        android:layout_height="37dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:hint="Item Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalValue" />

    <EditText
        android:id="@+id/etItemValue"
        android:layout_width="261dp"
        android:layout_height="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:hint="Item Value"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etItemName" />

    <Button
        android:id="@+id/Sell"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/Buy"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="37dp"
        android:text="Exchange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Sell"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="383dp"
        android:layout_height="318dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="17dp"
        android:choiceMode="singleChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="47dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="125dp"
        android:text="All products"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="414dp"
        android:layout_height="24dp"
        android:text="ItemStruct: condition - item - description - preference - value - user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="190dp"
        android:layout_height="24dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="221dp"
        android:text="ItemStruct: item - value - user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>